# queen

./: .gitignore  Cargo.toml  README.md  Trunk.toml  flake.nix  index.html  justfile
.cargo/: config.toml
assets/: README.md  state.yaml
src/: controller.rs  debug.rs  game.rs  helpers.rs  input.rs  main.rs  settings.rs  setup.rs  state.rs  ui.rs
src/game/: actions.rs  animation.rs  ants.rs  approved.rs  brains.rs  camera.rs  debug.rs  dirt.rs  eggs.rs  food.rs  food_types.rs  hunger.rs  jobs.rs  map.rs  mouse.rs  new_brain.rs  pathfinding.rs  plugin.rs  positions.rs  queen.rs  setup.rs  side_effects.rs  simple_brain.rs  skill.rs  time.rs  ui.rs  zones.rs
src/game/brains/: pathfinding.rs
src/ui/: debug.rs  menu.rs  splash.rs  stats.rs
web/: index.scss
